chore: add fastify 5 (#2)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,38 @@
 {
-	"extends": "@oly_op/tsconfig/tsconfig",
+	"$schema": "https://json.schemastore.org/tsconfig.json",
 	"compilerOptions": {
+		"allowUnreachableCode": false,
+		"allowUnusedLabels": false,
+		"alwaysStrict": true,
+		"exactOptionalPropertyTypes": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": false,
+		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"useUnknownInCatchVariables": true,
+		"allowUmdGlobalAccess": false,
+		"moduleResolution": "NodeNext",
+		"resolveJsonModule": true,
+		"declarationMap": false,
+		"preserveConstEnums": true,
+		"removeComments": true,
+		"sourceMap": false,
+		"allowJs": false,
+		"disableSizeLimit": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"target": "ESNext",
+		"experimentalDecorators": false,
 		"lib": ["ES2021"],
 		"declaration": true,
 		"module": "NodeNext"
